--- a/tests/integrations/vllm_plugin/generative/test_config/model_configs_tensor_parallel_llmbox.yaml
+++ b/tests/integrations/vllm_plugin/generative/test_config/model_configs_tensor_parallel_llmbox.yaml
@@ -99,3 +99,29 @@ model_configs:
     reason: "Model hangs"
   mistral-7b-instruct-v0.3:
     model: mistralai/Mistral-7B-Instruct-v0.3
+  vllm_sweep_aquila:
+    model: BAAI/Aquila-7B
+  vllm_sweep_aquila_chat:
+    model: BAAI/AquilaChat-7B
+  vllm_sweep_baichuan:
+    model: baichuan-inc/Baichuan-7B
+  vllm_sweep_deepseek:
+    model: deepseek-ai/deepseek-llm-7b-chat
+  vllm_sweep_chat_glm2:
+    model: THUDM/chatglm2-6b
+  vllm_sweep_chat_glm3:
+    model: THUDM/chatglm3-6b
+  vllm_sweep_glm:
+    model: THUDM/glm-4-9b-chat-hf
+  vllm_sweep_internlm:
+    model: internlm/internlm-7b
+  vllm_sweep_internlm2:
+    model: internlm/internlm2-7b
+  vllm_sweep_internlm3:
+    model: internlm/internlm3-8b-instruct
+  vllm_sweep_olmo2:
+    model: allenai/OLMo2-7B-1124
+  vllm_sweep_qwen:
+    model: Qwen/Qwen-7B
+  vllm_sweep_solar:
+    model: upstage/solar-pro-preview-instruct
