--- a/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
+++ b/tests/runner/test_config/jax/test_config_inference_tensor_parallel.yaml
@@ -135,15 +135,15 @@ test_config:
 
   qwen_3/causal_lm/jax-1_7b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: NOT_SUPPORTED_SKIP
-    reason: "Not enough space to allocate 3355443200 B DRAM buffer across 12 banks, where each bank needs to store 279621632 B, but bank size is 1073741792 B"
-    bringup_status: FAILED_RUNTIME
+    status: EXPECTED_PASSING
+    assert_pcc: false
+    reason: "Severe PCC comparison failed: pcc=0.004 < 0.99 required. n300 OOM"
 
   qwen_3/causal_lm/jax-4b-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
-    status: NOT_SUPPORTED_SKIP
-    reason: "Not enough space to allocate 3355443200 B DRAM buffer across 12 banks, where each bank needs to store 279621632 B, but bank size is 1073741792 B"
-    bringup_status: FAILED_RUNTIME
+    status: EXPECTED_PASSING
+    assert_pcc: false
+    reason: "Severe PCC comparison failed: pcc=0.0005 < 0.99 required. n300 OOM"
 
   mnist/image_classification/jax-mlp_custom_1x2-tensor_parallel-inference:
     supported_archs: ["n300-llmbox"]
