add loguru as dependency

--- a/pjrt_implementation/src/utils/CMakeLists.txt
+++ b/pjrt_implementation/src/utils/CMakeLists.txt
@@ -26,6 +26,7 @@ target_include_directories(TTPJRTUtils PUBLIC
 
 add_dependencies(TTPJRTUtils
     tt-mlir
+    loguru-external
 )
 
 target_link_libraries(TTPJRTUtils PUBLIC
