--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -24,7 +24,8 @@ jobs:
       docker-image: ${{ inputs.release_docker_image }}
       ref: main
       project: tt-xla
-      sh-runner: true
+      sh-runner: false
+      skip-device-perf: false
 
   demo-test:
     uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
