Fix update test durations

--- a/.github/workflows/manual-update-durations.yml
+++ b/.github/workflows/manual-update-durations.yml
@@ -43,7 +43,7 @@ jobs:
               if echo "$conclusions" | grep -q -w "$conclusion"; then
                 break
               else
-                ((counter++))
+                ((++counter))
 
                 # Exit if the counter reaches $num
                 if [ $counter -ge $num ]; then
