do not perform editable wheel install if building real wheel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ option(TTMLIR_ENABLE_PERF_TRACE "Enable performance tracing in tt-mlir" ON)
 option(TTMLIR_ENABLE_BINDINGS_PYTHON "Enable Python bindings in tt-mlir" OFF)
 option(TTXLA_ENABLE_EXPLORER "Enable Explorer feature in tt-mlir" OFF)
 option(TTXLA_ENABLE_PJRT_TESTS "Enable PJRT tests" OFF)
+option(TTXLA_ENABLE_EWHEEL_INSTALL "Enable editable wheel install" ON)
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
   set(TTXLA_ENABLE_PJRT_TESTS ON)
 endif()
